--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ p{
     grid-template-columns: repeat(5, 1fr );
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-    padding: 170px;
+    padding-left: 170px;
     background-color: rgb(26,28,40);
 
   }
@@ -179,6 +179,7 @@ padding-left: -500px;
     border: 2px solid #ffffff;
     height: 40px;
     width: 100px;    
+    margin-top: 100px;
     border-radius: 50px;
 }
 a{
